--- a/Valentine Website/Valentine/VGLAE/Games/Game Design/game.css
+++ b/Valentine Website/Valentine/VGLAE/Games/Game Design/game.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
+}
+
 .hiding-spots-container { 
     display: grid; 
     grid-template-columns: repeat(4, 1fr); 
