--- a/Valentine Website/Valentine/VGLAE/Music/music design/music.css
+++ b/Valentine Website/Valentine/VGLAE/Music/music design/music.css
@@ -38,8 +38,8 @@ body {
     appearance: none;
     width: 300px;
     height: 5px;
-    background: repeating-linear-gradient(45deg, red, red 12px, white 12px, white 24px);
-    border: 1px solid red;
+    background: repeating-linear-gradient(45deg, rgb(47, 255, 0), rgb(0, 255, 64) 12px, rgb(127, 255, 150) 12px, rgb(87, 236, 122) 24px);
+    border: 1px solid rgb(51, 255, 0);
     border-radius: 10px;
     margin-top: 20px;
 }
@@ -48,7 +48,7 @@ body {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background: red;
+    background: rgb(24, 148, 3);
     width: 15px;
     height: 15px;
     border-radius: 50%;
